--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "skyblock-backend",
   "version": "1.0.0",
-  "description": "",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc"
@@ -13,5 +12,9 @@
   "devDependencies": {
     "typescript": "^5.5.3"
   },
-  "private": true
+  "private": true,
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
