--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "hypixel-api-reborn": "^11.3.7"
   },
   "devDependencies": {
     "typescript": "^5.5.3"
