--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "skyblock-backend",
-  "version": "1.0.0",
+  "version": "0.0.1",
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "nodemon --exec node src/index.ts"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "hypixel-api-reborn": "^11.3.7"
   },
-  "devDependencies": {
-    "typescript": "^5.5.3"
-  },
   "private": true,
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.9.0",
+    "tsx": "^4.19.2",
+    "typescript": "^5.6.3"
+  }
 }
